--- a/axion-patient_portal/src/locales/en.json
+++ b/axion-patient_portal/src/locales/en.json
@@ -1,6 +1,6 @@
 {
   "welcomeMessage": "Welcome ",
-  "basicHealthInformation": "Basic Health Information",
+  "basicHealthInformation": "Basic Information",
   "name": "Name",
   "age": "Age",
   "height": "Height",
@@ -34,5 +34,33 @@
   "diagnosis": "Diagnosis",
   "prescribedAt": "Prescribed At",
   "treatmentDuration": "Treatment Duration",
-  "doctor": "Doctor"
+  "doctor": "Doctor",
+  "allergies": "Allergies",
+  "no_allergies_data": "No allergies data available.",
+  "criticality": "Criticality",
+  "severity": "Severity",
+  "category": "Category",
+  "source": "Source",
+  "verification_status": "Verification Status",
+  "created": "Created",
+  "immunizations": "Immunizations",
+  "no_immunizations_data": "No immunizations data available.",
+  "site": "Site",
+  "administered_on": "Administered on",
+  "no_medications_found": "No medications found",
+  "your_profile": "Your Profile",
+  "reset_password": "Reset password",
+  "delete_account": "Delete account",
+  "confirm": "Confirm",
+  "cancel": "Cancel",
+  "enter_email_and_password": "Enter Email and Password to confirm account deletion.",
+  "no_reports_found": "No reports found",
+  "download": "Download",
+  "no_data_available": "No data available.",
+  "data_not_found": "Data not found.",
+  "something_went_wrong": "Something went wrong.",
+  "email": "Email",
+  "password": "Password",
+  "old_password": "Password",
+  "new_password": "New Password"
 }
