--- a/axion-patient_portal/src/locales/si.json
+++ b/axion-patient_portal/src/locales/si.json
@@ -34,5 +34,33 @@
   "diagnosis": "රෝග විනිශ්චය",
   "prescribedAt": "නියම කළ දිනය",
   "treatmentDuration": "වෛද්‍ය ප්‍රතිකාර කාලය",
-  "doctor": "වෛද්‍ය"
+  "doctor": "වෛද්‍ය",
+  "allergies": "ඇලර්ජි",
+  "no_allergies_data": "ඇලර්ජි තොරතුරු කිසිවක් ලබාගත නොහැක.",
+  "criticality": "සංශෝධනත්වය",
+  "severity": "කඩාකප්පල්",
+  "category": "ප්‍රවර්ගය",
+  "source": "මූලාකෘතිය",
+  "verification_status": "සත්‍යාපන තත්වය",
+  "created": "ඉස්සර කරන ලදි",
+  "immunizations": "රෝග වාතාවරණ",
+  "no_immunizations_data": "රෝග වාතාවරණ තොරතුරු කිසිවක් ලබාගත නොහැක.",
+  "site": "ස්ථානය",
+  "administered_on": "කෙරුණු දිනය",
+  "no_medications_found": "ඉන්ද්‍රිය පුරුදු හෝ පෝෂක විකිරණ නැත",
+  "your_profile": "ඔබගේ පැතිකඩ",
+  "reset_password": "මුරපදය නැවත සකස් කරන්න",
+  "delete_account": "ගිණුම මකා දමන්න",
+  "confirm": "ඇතුළත් කරන්න",
+  "cancel": "අවලංගු කරන්න",
+  "enter_email_and_password": "ගිණුම මකා දමන බව තහවුරු කිරීමට ඊ-මේල් සහ මුරපදය ඇතුළත් කරන්න.",
+  "no_reports_found": "වාර්තා කිසිවක් සොයා ගත නොහැක",
+  "download": "බාගත කරන්න",
+  "no_data_available": "තොරතුරු කිසිවක් ලබාගත නොහැක.",
+  "data_not_found": "තොරතුරු සොයා ගත නොහැක.",
+  "something_went_wrong": "කිසියම් දෝෂයක් සිදු විය.",
+  "email": "ඊ-මේල්\"",
+  "password": "මුරපදය",
+  "old_password": "පැරණි මුරපදය",
+  "new_password": "නව මුරපදය"
 }
