--- a/axion-patient_portal/src/locales/ta.json
+++ b/axion-patient_portal/src/locales/ta.json
@@ -1,6 +1,6 @@
 {
   "welcomeMessage": "வரவேற்கிறோம்",
-  "basicHealthInformation": "அடிப்படை ஆரோக்கியத்தகவல்",
+  "basicHealthInformation": "அடிப்படை தகவல்",
   "name": "பெயர்",
   "age": "வயது",
   "gender": "பாலினம்",
@@ -34,5 +34,33 @@
   "diagnosis": "நோய் கண்டறிதல்",
   "prescribedAt": "மருந்து வழங்கப்பட்ட தேதி",
   "treatmentDuration": "சிகிச்சை கால அளவு",
-  "doctor": "மருத்துவர்"
+  "doctor": "மருத்துவர்",
+  "allergies": "ஒவ்வாமைகள்",
+  "no_allergies_data": "ஒவ்வாமைகள் எதுவும் கிடைக்கவில்லை.",
+  "criticality": "பெரும் அவசரம்",
+  "severity": "கடுமை",
+  "category": "பிரிவு",
+  "source": "மூலம்",
+  "verification_status": "சரிபார்ப்பு நிலை",
+  "created": "உருவாக்கப்பட்டது",
+  "immunizations": "நோய்த்தடுப்பு",
+  "no_immunizations_data": "நோய்த்தடுப்பு தரவு எதுவும் கிடைக்கவில்லை.",
+  "site": "இடம்",
+  "administered_on": "தேதி",
+  "no_medications_found": "மருந்துகள் எதுவும் கிடைக்கவில்லை",
+  "your_profile": "உங்கள் சுயவிவரம்",
+  "reset_password": "கடவுச்சொல்லை மீட்டமைக்கவும்",
+  "delete_account": "கணக்கை நீக்கு",
+  "confirm": "உறுதி செய்யவும்",
+  "cancel": "நிராகரிக்கவும்",
+  "enter_email_and_password": "கணக்கு நீக்கத்தை உறுதி செய்ய மின்னஞ்சல் மற்றும் கடவுச்சொல்லை உள்ளிடவும்.",
+  "no_reports_found": "அறிக்கைகள் கிடைக்கவில்லை",
+  "download": "பதிவிறக்கவும்",
+  "no_data_available": "தரவு கிடைக்கவில்லை.",
+  "data_not_found": "தரவு கிடைக்கவில்லை.",
+  "something_went_wrong": "ஏதோ தவறு நடந்தது.",
+  "email": "மின்னஞ்சல்",
+  "password": "கடவுச்சொல்",
+  "old_password": "பழைய கடவுச்சொல்",
+  "new_password": "புதிய கடவுச்சொல்"
 }
