--- a/axion/project 3/flutter_application_1/lib/l10n/app_ta.arb
+++ b/axion/project 3/flutter_application_1/lib/l10n/app_ta.arb
@@ -190,5 +190,8 @@
   "confirmLogout": "வெளியேறுவதை உறுதிப்படுத்தவும்",
   "logoutMessage": "நீங்கள் வெளியேற விரும்புகிறீர்களா?",
   "cancel": "ரத்துசெய்",
-  "logoutFailed": "வெளியேற இயலவில்லை"
+  "logoutFailed": "வெளியேற இயலவில்லை",
+  "otpSubmittedSuccess": "OTP வெற்றிகரமாக சமர்ப்பிக்கப்பட்டது",
+  "otpFieldLabel": "6 இலக்க OTP ஐ உள்ளிடவும்",
+  "submit": "சமர்ப்பிக்கவும்"
 }
